2005-06-01  Derek Price  <derek@ximbiot.com>

	* TODO (214): Remove completed item.

2005-06-01  Conrad T. Pino  <Conrad@Pino.com>

	* makewin32.cmd: Add options to support CLEAN build target.

2005-06-01  Conrad T. Pino  <Conrad@Pino.com>

	* makewin32.cmd: Add Windows NT command file to build CVS Project.

2005-05-31  Conrad T. Pino  <Conrad@Pino.com>

	* cvsnt.dep: Regenerate after build for #include changes.

2005-05-30  Conrad T. Pino  <Conrad@Pino.com>

	* cvsnt.dsp: Add files "lib/quotearg.h", "lib/stat-macros.h",
	  "windows-NT/woe32.h" and "windows-NT/unistd.c" to project.
	* cvsnt.dep, cvsnt.mak: Regenerate for "cvsnt.dsp" changes.

2005-05-27  Derek Price  <derek@ximbiot.com>

	* NEWS: Note diff space split fix.
	* BUGS: Remove diff space split note.

2005-05-27  Derek Price  <derek@ximbiot.com>

	* maint-aux/gnulib-modules: Add quotearg module.

2005-05-26  Derek Price  <derek@ximbiot.com>

	* maint-aux/gnulib-modules: Add stat-macros module.

2005-05-25  Derek Price  <derek@ximbiot.com>

	* maint-aux/gnulib-modules: Add getlogin_r module.

2005-05-24  Conrad T. Pino  <Conrad@Pino.com>

	* cvsnt.dsp: Add lib/canonicalize.h and lib/glob.h to project.
	* cvsnt.dep: Regenerate for cvsnt.dsp changes.

2005-05-23  Derek Price  <derek@ximbiot.com>

	* maint-aux/gnulib-modules: Add GNULIB canonicalize module.

2005-05-23  Derek Price  <derek@ximbiot.com>

	* configure.in: Update Copyright years.

2005-05-17  Conrad T. Pino  <Conrad@Pino.com>

	* cvsnt.dep: Regenerated for "lib/libcvs.dsp" change.

2005-05-11  Derek Price  <derek@ximbiot.com>

	* NEWS: Note new History* config options.
	* maint-aux/gnulib-filelist.txt: Add strdup module.

2005-05-09  Conrad T. Pino  <Conrad@Pino.com>

	* cvsnt.dep, cvsnt.mak: Regenerated after Windows full rebuild.

2005-05-09  Derek Price  <derek@ximbiot.com>

	* cvs.spec.in: Find install-sh in its new location.

2005-05-06  Derek Price  <derek@ximbiot.com>

	* NEWS: Note Solaris 10 command option parsing fix.
