@@ -1,3 +1,7 @@
+2005-06-02  Derek Price  <derek@ximbiot.com>
+
+	* NEWS: Note server compression hang fix.
+
 2005-06-01  Derek Price  <derek@ximbiot.com>
 
 	* TODO (214): Remove completed item.
